solved spacing issue in footer

--- a/src/section/home/Footer section/Footer.module.css
+++ b/src/section/home/Footer section/Footer.module.css
@@ -148,6 +148,7 @@
   }
   .container{
     padding:20px;
+    height: 40vh;
     
    
   }
